--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       @import "aside.html"
       <main class="main">
          <div class="container">
-
+            @import "main/storis.html"
          </div>
       </main>
       @import "footer.html"
