--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <main class="main">
          <div class="container">
             @import "main/storis.html"
+            @import "main/add-posts.html"
          </div>
       </main>
       @import "footer.html"
