--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
          <div class="container">
             @import "main/storis.html"
             @import "main/add-posts.html"
+            @import "main/posts.html"
          </div>
       </main>
       @import "footer.html"
