--- a/src/search.html
+++ b/src/search.html
@@ -123,8 +123,11 @@
             <!-- post-4 -->
          </div>
       </main>
-      @import "footer.html"
    </div>
+
+   @import "modals/story-modal.html"
+   @import "modals/share-modal.html"
+   @import "modals/contact-modal.html"
    <script src="assets/js/main.min.js"></script>
 </body>
 
