--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
    <link rel="stylesheet" href="assets/styles/main.min.css">
 </head>
 
-<body class="no-scroll">
+<body>
    <div class="page">
       @import "header.html"
       @import "aside.html"
