--- a/src/post.html
+++ b/src/post.html
@@ -21,8 +21,11 @@
             @import "main/posts-post.html"
          </div>
       </main>
-      @import "footer.html"
    </div>
+
+   @import "modals/story-modal.html"
+   @import "modals/share-modal.html"
+   @import "modals/contact-modal.html"
    <script src="assets/js/main.min.js"></script>
 </body>
 
