--- a/src/profile.html
+++ b/src/profile.html
@@ -66,8 +66,11 @@
             </div>
          </div>
       </main>
-      @import "footer.html"
    </div>
+
+   @import "modals/story-modal.html"
+   @import "modals/share-modal.html"
+   @import "modals/contact-modal.html"
    <script src="assets/js/main.min.js"></script>
 </body>
 
