--- a/src/signup.html
+++ b/src/signup.html
@@ -45,8 +45,11 @@
             </form>
          </div>
       </main>
-      @import "footer.html"
    </div>
+
+   @import "modals/story-modal.html"
+   @import "modals/share-modal.html"
+   @import "modals/contact-modal.html"
    <script src="assets/js/main.min.js"></script>
 </body>
 
